--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -35,7 +35,7 @@
     border-radius: 4%;
     margin-right: 10px;
     margin-left: 7px;
-    box-shadow: 0px 10px 15px grey;
+    box-shadow: 0px 2px 15px 0px #f5cccc;
     background-color: white !important;
 }
 
@@ -70,7 +70,7 @@
     border-color: white;
     border: 2px solid white;
     position: relative;
-    top: 2.5px;
+    top: 0px;
     right: 15px;
 }
 
