--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -132,5 +132,6 @@
 .authorName{
   left: 30px;
   position: relative;
-  font-size: 3.5vw;
+  font-size: 4rem;
+  font-family: 'Raleway', sans-serif;
 }
